--- a/configs/mipsel-3.4.config
+++ b/configs/mipsel-3.4.config
@@ -7330,6 +7330,7 @@ CONFIG_PACKAGE_cal=m
 # CONFIG_PACKAGE_cgroupfs-mount is not set
 # CONFIG_PACKAGE_checkpolicy is not set
 CONFIG_PACKAGE_cksfv=m
+CONFIG_PACKAGE_cmatrix=m
 # CONFIG_PACKAGE_cmdpad is not set
 # CONFIG_PACKAGE_coap-client is not set
 CONFIG_PACKAGE_collectd=m
